fix update portfolio
